--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 11 20:52:10 EET 2021
-sdk.dir=C\:\\Users\\Catalin\\AppData\\Local\\Android\\Sdk
+#Tue Jan 12 21:01:48 EET 2021
+sdk.dir=C\:\\Users\\Marius\\AppData\\Local\\Android\\Sdk
