bills reminder + pay bills

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,15 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CalaTourApp">
-        <activity android:name=".activities.MoneyManageActivity"></activity>
+        <activity android:name=".activities.PaySelectedBillActivity"></activity>
+        <activity android:name=".activities.MoneyManageActivity" />
         <activity android:name=".activities.SocialNetworksActivity" />
         <activity android:name=".activities.SplitBillActivity" />
         <activity android:name=".activities.WishListActivity" />
