--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 12 21:31:02 EET 2021
-sdk.dir=C\:\\Users\\Marius\\AppData\\Local\\Android\\Sdk
+#Tue Jan 12 21:29:51 EET 2021
+sdk.dir=D\:\\Users\\radu9\\AppData\\Local\\Android\\Sdk
